--- a/.github/workflows/coverage-task.yml
+++ b/.github/workflows/coverage-task.yml
@@ -26,20 +26,20 @@ jobs:
           distribution: "adopt"
           java-version: "11"
 
-      - name: [Shared] Build
+      - name: Shared - Build
         run: ./gradlew build -x check
         ## Excluding the check task to build faster
 
-      - name: [Android] Run Unit Tests
+      - name: Android - Run Unit Tests
         run: ./gradlew check
 
-      - name: [Android] Run Instrumented Tests
+      - name: Android - Run Instrumented Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           script: ./gradlew connectedCheck
 
-      - name: [iOS] Run Tests
+      - name: iOS - Run Tests
         run: xcodebuild -scheme iosApp -workspace iosApp.xcworkspace -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=15.0' build test
 
       - name: Coverage
