--- a/.github/workflows/coverage-task.yml
+++ b/.github/workflows/coverage-task.yml
@@ -37,7 +37,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: ./gradlew connectedCheck
+          script: ./gradlew :androidApp:connectedCheck
 
       - name: iOS - Run Tests
         run: xcodebuild -scheme iosApp -workspace iosApp/iosApp.xcworkspace -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=15.0' build test
