another try to ios build

--- a/.github/workflows/coverage-task.yml
+++ b/.github/workflows/coverage-task.yml
@@ -40,7 +40,15 @@ jobs:
           script: ./gradlew :androidApp:connectedCheck
 
       - name: iOS - Run Tests
-        run: xcodebuild -scheme iosApp -workspace iosApp/iosApp.xcworkspace -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=14.4' build test
+        run: |
+          cd iosApp
+          pod install
+          xcodebuild \
+            -workspace iosApp.xcworkspace \
+            -scheme iosApp \
+            -sdk iphonesimulator \
+            -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=14.4' \
+            build test
 
       - name: Coverage
         run: bash <(curl -s https://codecov.io/bash)
