testing clean build without pod install

--- a/.github/workflows/coverage-task.yml
+++ b/.github/workflows/coverage-task.yml
@@ -27,22 +27,21 @@ jobs:
           java-version: "11"
 
       - name: Shared - Build
-        run: ./gradlew build -x check
+        run: ./gradlew clean build -x check
         ## Excluding the check task to build faster
 
-      - name: Android - Run Unit Tests
-        run: ./gradlew check
-
-      - name: Android - Run Instrumented Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          script: ./gradlew :androidApp:connectedCheck
+#      - name: Android - Run Unit Tests # And linter
+#        run: ./gradlew check
+#
+#      - name: Android - Run Instrumented Tests
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: 29
+#          script: ./gradlew :androidApp:connectedCheck
 
       - name: iOS - Run Tests
         run: |
           cd iosApp
-          pod install
           xcodebuild \
             -workspace iosApp.xcworkspace \
             -scheme iosApp \
