--- a/.github/workflows/coverage-task.yml
+++ b/.github/workflows/coverage-task.yml
@@ -50,4 +50,6 @@ jobs:
             build test
 
       - name: Coverage
-        run: bash <(curl -s https://codecov.io/bash)
+        run: |
+          bash <(curl -s https://codecov.io/bash)
+          bash <(curl -s https://codecov.io/bash) -X xcodellvm
