--- a/.github/workflows/coverage-task.yml
+++ b/.github/workflows/coverage-task.yml
@@ -55,7 +55,12 @@ jobs:
             -destination 'platform=iOS Simulator,name=iPhone SE (2nd generation),OS=14.4' \
             build test
 
-      - name: Coverage
+      - name: Codecov
         run: |
           bash <(curl -s https://codecov.io/bash)
           bash <(curl -s https://codecov.io/bash) -X xcodellvm
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
